--- a/seções/login.html
+++ b/seções/login.html
@@ -12,25 +12,28 @@
     
 </head>
 <body>
-
-    <div class="container">
-        <div class="telaLogin row d-flex justify-content-center">
-            <div class="login col-5">
-                <h1>Fazer Login</h1>
+    <img class="logo-ifood" src="../img/ifood.png">
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="telaLogin row">
+            <div class="login col-12 col-md-6 text-light">
+                <h1 class="text-center md-mt-5 md-pb-5">Fazer Login</h1>
                 <form>
-                    <div class="mb-3">
+                    <div class="mb-2 ms-4">
                         <label for="email" class="form-label fw-bold text-colored">E-mail</label>
                         <input type="email" id="email" class="form-control" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-2 ms-4">
                         <label for="senha" class="form-label fw-bold text-colored">Senha</label>
-                        <input type="tel" id="telefone" class="form-control">
+                        <input type="password" id="senha" class="form-control">
                     </div>
                 </form>
+                <div class="d-flex justify-content-center">
+                    <button class="botao-login mt-5">Entrar</button>
+                </div>
             </div>
-            <div class="textoDireita col-5 p">
-                <h1>Gestão Financeira para seu negócio.</h1>
-                <a href="./cadastro.html">não possui conta? clique aqui</a>
+            <div class="textoDireita text-light text-center col-12 col-md-6 p-5">
+                <h1 class="pb-5">Gestão Financeira para seu negócio.</h1>
+                <a class="text-light" href="./cadastro.html">Não possui conta? Faça o Cadastro.</a>
             </div>
         </div>
     </div>
