--- a/seções/login.html
+++ b/seções/login.html
@@ -28,7 +28,7 @@
                     </div>
                 </form>
                 <div class="d-flex justify-content-center">
-                    <button class="botao-login mt-5">Entrar</button>
+                    <a href="menu.html" class="botao-login mt-5">Entrar</a>
                 </div>
             </div>
             <div class="textoDireita text-light text-center col-12 col-md-6 p-5">
