--- a/seções/menu.html
+++ b/seções/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,59 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../style/menu.css">
 </head>
 <body>
-    <header class="row">
-        <img src="./" alt="">
+    <header class="position-fixed top-0 start-0 w-100 text-white p-3 shadow" style="background-color: #a00000;">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a href="./login.html" class="text-white">
+                <i class="fa-solid fa-arrow-left" style="height: 30px;"></i>
+            </a>
+            <img src="../img/ifoodbranco.png" alt="Logo" class="img-fluid" style="max-height: 80px;">
+            <div style="width: 40px;"></div>
+        </div>
     </header>
-    <h1 class="text-light">
-        Ola, Parceiro iFood!
-    </h1>
+
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="row w-100">
+            <div class="start col-12 col-md-6 d-flex flex-column align-items-start text-light mb-4 mb-md-0">
+                <h1 class="mb-5 text-center text-md-start mt-md-5">Olá, Parceiro iFood!</h1>
+                <div class="saldo p-3" style="background-color: #a00000; height: 168px; width: 100%; max-width: 400px; border-radius: 25px;">
+                    <h1 style="font-size: 32px;">Seu saldo é de: <br>R$10.000,00</h1>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6">
+                <div class="row g-3">
+                    <div class="sections col-12 col-md-5 p-5 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
+                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                            Gerenciar Pedidos
+                        </a>
+                    </div>
+                    <div class="sections col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
+                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 21px; font-weight: 700;">
+                            Consulta de Transações
+                        </a>
+                    </div>
+                </div>
+                <div class="row g-3 mt-3">
+                    <div class="sections col-12 col-md-5 p-5 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
+                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                            Dashboard Financeiro
+                        </a>
+                    </div>
+                    <div class="sections foot col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
+                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                            Relatórios e Análises
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
 </html>
