perto de acabar

--- a/seções/menu.html
+++ b/seções/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Inicial</title>
+    <title>Menu Inicial - Gestão iFood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <header class="position-fixed top-0 start-0 w-100 text-white p-3 shadow" style="background-color: #a00000;">
         <div class="container d-flex justify-content-between align-items-center">
             <a href="./login.html" class="text-white">
-                <i class="fa-solid fa-arrow-left" style="height: 30px;"></i>
+                <i class="fa-solid fa-reply" style="color: #ffffff; height: 30px;"></i>
             </a>
             <img src="../img/ifoodbranco.png" alt="Logo" class="img-fluid" style="max-height: 80px;">
             <div style="width: 40px;"></div>
@@ -34,12 +34,12 @@
             <div class="col-12 col-md-6">
                 <div class="row g-3">
                     <div class="sections col-12 col-md-5 p-5 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                        <a href="./pedidos.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
                             Gerenciar Pedidos
                         </a>
                     </div>
                     <div class="sections col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 21px; font-weight: 700;">
+                        <a href="./transacoes.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 21px; font-weight: 700;">
                             Consulta de Transações
                         </a>
                     </div>
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                     <div class="sections foot col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                        <a href="./relatorios.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
                             Relatórios e Análises
                         </a>
                     </div>
