--- a/seções/relatorios.html
+++ b/seções/relatorios.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Gestão iFood</title>
+    <title>Relatórios - Gestão iFood</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,51 +12,92 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/dashboard.css">
-
+    <link rel="stylesheet" href="../style/relatorios.css">
+    <link rel="stylesheet" href="../style/navbar.css">
 </head>
 
 <body>
-    <header class="container-flex mt-3">
-        <nav class="navbar navbar-expand-lg">
-            <div class="d-fluid" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item away">
-                        <a class="nav-link" aria-current="page" href="#semana">Semana</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#mes">Mês</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#semestre">Semestre</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="d-fluid meu-botao">
-                <button class="btn btn-danger me-2"><i class="fa-regular fa-user"></i> Add valor +</button>
-            </div>
-            <div class="date-picker-container">
-                <button class="btn btn-outline-danger me-2" id="openDatePicker">
-                  <i class="fa-regular fa-calendar"></i> Selecionar Data
-                </button>
-                <input type="date" id="datePicker" class="d-none">
-              </div>
-            <img src="../img/ifood-removebg-preview 1.png" alt="Logo" class="img-fluid">
-        </nav>
-    </header>
 
-    <div class="mbOnly">
-        <img style="width: 100%;" src="../img/mbimage1.png" alt="">
-        <img style="width: 100%;" src="../img/mbimage2.png" alt="">
-        <img style="width: 100%;" src="../img/mbimage3.png" alt="">
-        <img style="width: 100%;" src="../img/mbimage4.png" alt="">
+    <h1>Relatórios</h1>    
+
+    <!-- Top Menu -->
+    <div class="top-menu">
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
+        <ul>
+            <li><i class="fas fa-calendar-alt"></i> Calendário</li>
+            <li><i class="fas fa-shopping-cart"></i> Pedidos</li>
+            <li><i class="fas fa-exchange-alt"></i> Transações</li>
+        </ul>
     </div>
 
-    <div class="d-flex justify-content-end minhaimagem">
-        <img style="width: 100%;" class="dashbrd" src="../img/Group 64.png" alt="Dashboard">
+    <div class="filter-bar">
+        <h2><span><i class="fa-solid fa-filter" style="color: #ffffff;"></i></span> Filtrar</h2>
+        <div class="filter-items">
+            <h2>Filtrar por:</h2>
+            <ul>
+                <li>Relatório Geral</li>
+                <li>Relatório de Saldo</li>
+                <li>Relatório de Pedidos</li>
+                <li>Relatório de Transações</li>
+                <li>Relatório de Gastos</li>
+                <li>Relatório de Ocorrências</li>
+                <li>Relatório de Entregas</li>
+                <li>Filtrar por data</li>
+            </ul>
+        </div>
     </div>
 
-    
+    <!-- Dashboard Cards -->
+    <div class="container">
+        <div class="dashboard">
+            <div class="card green">
+                <h3>Média de pedidos por dia</h3>
+                <p>8</p>
+            </div>
+
+            <div class="card green">
+                <h3>Transações bem sucedidas mensal</h3>
+                <p>200</p>
+            </div>
+
+            <div class="card orange">
+                <h3>Transações em andamento</h3>
+                <p>50</p>
+            </div>
+
+            <div class="card red">
+                <h3>Gastos por semana</h3>
+                <p>R$ 1.500</p>
+            </div>
+
+            <div class="card green">
+                <h3>Média de arrecadação por dia</h3>
+                <p>R$ 745,13</p>
+                <a href="#" class="details-button">Veja os detalhes</a>
+            </div>
+
+            <div class="card green">
+                <h3>Média de pedidos por Semana</h3>
+                <p>R$ 4.470,78</p>
+                <a href="#" class="details-button">Veja os detalhes</a>
+            </div>
+
+            <div class="card green">
+                <h3>Média de pedidos por mês</h3>
+                <p>R$ 17.883,12</p>
+                <a href="#" class="details-button">Veja os detalhes</a>
+            </div>
+
+            <div class="card green">
+                <h3>Média de pedidos por ano</h3>
+                <p>R$ 214.597,44</p>
+                <a href="#" class="details-button">Veja os detalhes</a>
+            </div>
+        </div>
+    </div>
+
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -115,7 +157,29 @@
         </aside>
     </div>
 
+    <script>
+        const menuToggle = document.querySelector('.menu-toggle');
+        const menuList = document.querySelector('.top-menu ul');
+
+        menuToggle.addEventListener('click', function() {
+        menuList.classList.toggle('expanded');
+        });
+
+
+        const filterToggle = document.querySelector('.filter-bar span');
+        const filterItems = document.querySelector('.filter-items');
+
+        filterToggle.addEventListener('click', function() {
+        if (filterItems.style.display === 'none' || filterItems.style.display === '') {
+            filterItems.style.display = 'block'; 
+            }   else  {
+            filterItems.style.display = 'none';  
+            }
+        });
+    </script>
     <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
