--- a/pages/menu.html
+++ b/pages/menu.html
@@ -17,7 +17,7 @@
             <a href="./login.html" class="text-white">
                 <i class="fa-solid fa-reply" style="color: #ffffff; height: 30px;"></i>
             </a>
-            <img src="../img/ifoodbranco.png" alt="Logo" class="img-fluid" style="max-height: 80px;">
+            <img src="../assets/img/ifoodbranco.png" alt="Logo" class="img-fluid" style="max-height: 80px;">
             <div style="width: 40px;"></div>
         </div>
     </header>
@@ -33,25 +33,25 @@
 
             <div class="col-12 col-md-6">
                 <div class="row g-3">
-                    <div class="sections col-12 col-md-5 p-5 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./pedidos.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                    <div class="sections col-12 col-md-5 p-5 mt-md-5">
+                        <a href="./pedidos.html" class="text d-block">
                             Gerenciar Pedidos
                         </a>
                     </div>
-                    <div class="sections col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./transacoes.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 21px; font-weight: 700;">
-                            Consulta de Transações
+                    <div class="sections col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5">
+                        <a href="./transacoes.html" class="text d-block">
+                            Consultar Transações
                         </a>
                     </div>
                 </div>
-                <div class="row g-3 mt-3">
-                    <div class="sections col-12 col-md-5 p-5 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./dashboard.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                <div class="row g-3 mt-0 md-mt-3">
+                    <div class="sections col-12 col-md-5 p-5 mt-md-5">
+                        <a href="./dashboard.html" class="text d-block">
                             Dashboard Financeiro
                         </a>
                     </div>
-                    <div class="sections foot col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5" style="background-color: #a00000; border-radius: 25px;">
-                        <a href="./relatorios.html" class="text-white text-center d-block" style="text-decoration: none; font-size: 24px; font-weight: 700;">
+                    <div class="sections foot col-12 col-md-5 p-5 ms-md-5 mt-3 mt-md-5">
+                        <a href="./relatorios.html" class="text d-block">
                             Relatórios e Análises
                         </a>
                     </div>
