--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <img class="logo-ifood" src="../img/ifood.png">
+    <img class="logo-ifood" src="../assets/img/ifood.png">
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="telaLogin row">
             <div class="login col-12 col-md-6 text-light">
@@ -63,13 +63,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <script>
-        $(document).ready(function() {
-            $('#cnpj').mask('00.000.000/0000-00');
-            $('#cpf').mask('000.000.000-00');
-            $('#telefone').mask('(00) 00000-0000');
-        });
-      </script>
+    <script src="../js/cadastro.js"></script>
+
 </body>
 </html>
