--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -40,19 +40,19 @@
                 </button>
                 <input type="date" id="datePicker" class="d-none">
               </div>
-            <img src="../img/ifood-removebg-preview 1.png" alt="Logo" class="img-fluid">
+            <img src="../assets/img/ifood-removebg-preview 1.png" alt="Logo" class="img-fluid">
         </nav>
     </header>
 
     <div class="mbOnly">
-        <img style="width: 100%;" src="../img/mbimage1.png" alt="">
-        <img style="width: 100%;" src="../img/mbimage2.png" alt="">
-        <img style="width: 100%;" src="../img/mbimage3.png" alt="">
-        <img style="width: 100%;" src="../img/mbimage4.png" alt="">
+        <img style="width: 100%;" src="../assets/img/mbimage1.png" alt="">
+        <img style="width: 100%;" src="../assets/img/mbimage2.png" alt="">
+        <img style="width: 100%;" src="../assets/img/mbimage3.png" alt="">
+        <img style="width: 100%;" src="../assets/img/mbimage4.png" alt="">
     </div>
 
     <div class="d-flex justify-content-end minhaimagem">
-        <img style="width: 100%;" class="dashbrd" src="../img/Group 64.png" alt="Dashboard">
+        <img style="width: 100%;" class="dashbrd" src="../assets/img/Group 64.png" alt="Dashboard">
     </div>
 
     
@@ -70,7 +70,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <span><img src="../img/perfil.png" alt="user" class="perfil"></span>
+                        <span><img src="../assets/img/perfil.png" alt="user" class="perfil"></span>
                     </a>
                 </li>
 
@@ -107,7 +107,7 @@
             </ul>
 
             <div class="sidebar-footer">
-                <a href="../seções/cadastro.html" class="sidebar-link">
+                <a href="./cadastro.html" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
@@ -115,7 +115,7 @@
         </aside>
     </div>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
