--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <img class="logo-ifood" src="../img/ifood.png">
+    <img class="logo-ifood" src="../assets/img/ifood.png">
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="telaLogin row">
             <div class="login col-12 col-md-6 text-light">
