--- a/pages/relatorios.html
+++ b/pages/relatorios.html
@@ -18,7 +18,9 @@
 
 <body>
 
-    <h1>Relatórios</h1>    
+    <h1>Relatórios</h1>   
+    
+    <img src="../assets/img/ifood.png" alt="" class="logo-ifood">
 
     <!-- Top Menu -->
     <div class="top-menu">
@@ -112,7 +114,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <span><img src="../img/perfil.png" alt="user" class="perfil"></span>
+                        <span><img src="../assets/img/perfil.png" alt="user" class="perfil"></span>
                     </a>
                 </li>
 
@@ -149,7 +151,7 @@
             </ul>
 
             <div class="sidebar-footer">
-                <a href="../seções/cadastro.html" class="sidebar-link">
+                <a href="./cadastro.html" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
@@ -157,28 +159,10 @@
         </aside>
     </div>
 
-    <script>
-        const menuToggle = document.querySelector('.menu-toggle');
-        const menuList = document.querySelector('.top-menu ul');
 
-        menuToggle.addEventListener('click', function() {
-        menuList.classList.toggle('expanded');
-        });
-
-
-        const filterToggle = document.querySelector('.filter-bar span');
-        const filterItems = document.querySelector('.filter-items');
-
-        filterToggle.addEventListener('click', function() {
-        if (filterItems.style.display === 'none' || filterItems.style.display === '') {
-            filterItems.style.display = 'block'; 
-            }   else  {
-            filterItems.style.display = 'none';  
-            }
-        });
-    </script>
-    <script src="../js/script.js"></script>
+    <script src="../js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/relatorios.js"></script>
 
 </body>
 
