--- a/pages/transacoes.html
+++ b/pages/transacoes.html
@@ -19,7 +19,7 @@
     <h1>Transações</h1>
   </header>
 
-  <img class="logo-ifood" src="../img/ifood.png" alt="">
+  <img class="logo-ifood" src="../assets/img/ifood.png" alt="">
     
   <div class="container">
 
@@ -233,7 +233,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link">
-                        <span><img src="../img/perfil.png" alt="user" class="perfil"></span>
+                        <span><img src="../assets/img/perfil.png" alt="user" class="perfil"></span>
                     </a>
                 </li>
 
@@ -270,7 +270,7 @@
             </ul>
 
             <div class="sidebar-footer">
-                <a href="../seções/cadastro.html" class="sidebar-link">
+                <a href="./cadastro.html" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
@@ -278,7 +278,7 @@
         </aside>
     </div>
     
-    <script src="../js/script.js"></script>
+    <script src="../js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
