quase finalizando todas as telas

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -87,7 +87,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="./pedidos" class="sidebar-link">
+                    <a href="./pedidos.html" class="sidebar-link">
                         <i class="fa-solid fa-box"></i>
                         <span>Pedidos</span>
                     </a>
