--- a/pages/transacoes.html
+++ b/pages/transacoes.html
@@ -17,11 +17,16 @@
 
   <header>
     <h1>Transações</h1>
+
+    <img class="logo-ifood" src="../assets/img/ifood.png" alt="">
   </header>
 
-  <img class="logo-ifood" src="../assets/img/ifood.png" alt="">
-    
   <div class="container">
+
+    <div class="saldo-atual">
+      <p>Saldo Atual: </p>
+      <span>R$ 10.500,00 ▲</span>
+    </div>
 
     <div class="operationBar d-flex flex-column justify-content-center" style="height: 70px; position: relative;">
       <ul class="list-unstyled d-flex mb-2 justify-content-center" style="font-size: 12px;">
@@ -250,7 +255,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="./pedidos" class="sidebar-link">
+                    <a href="./pedidos.html" class="sidebar-link">
                         <i class="fa-solid fa-box"></i>
                         <span>Pedidos</span>
                     </a>
