--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../style/login.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <img class="logo-ifood" src="../assets/img/ifood.png">
@@ -24,14 +23,9 @@
                             <input type="text" id="nome-empresa" class="form-control" required>
                         </div>
                         <div class="mb-2 ms-4">
-                            <label for="cpf" class="form-label fw-bold text-colored">CPF (Opcional se tiver CNPJ)</label>
-                            <input type="text" id="cpf" class="form-control" required>
+                            <label for="cpf" class="form-label fw-bold text-colored">CPF/CNPJ</label>
+                            <input type="text" id="cpfCnpj" class="form-control" required>
                         </div>
-                        <div class="mb-2 ms-4">
-                            <label for="cnpj" class="form-label fw-bold text-colored">CNPJ</label>
-                            <input type="text" id="cnpj" class="form-control" required>
-                        </div>
-                        
                         <div class="mb-2 ms-4">
                             <label for="email" class="form-label fw-bold text-colored">E-mail</label>
                             <input type="email" id="email" class="form-control" required>
@@ -61,7 +55,6 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/cadastro.js"></script>
 
