--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
             </div>
             <div class="textoDireita text-light text-center col-12 col-md-6 p-5">
                 <h1 class="pb-5">Gestão Financeira para seu negócio.</h1>
-                <a class="text-light" href="./cadastro.html">Não possui conta? Faça o Cadastro.</a>
+                <a class="text-light" href="./index.html">Não possui conta? Faça o Cadastro.</a>
             </div>
         </div>
     </div>
