--- a/pages/transacoes.html
+++ b/pages/transacoes.html
@@ -275,7 +275,7 @@
             </ul>
 
             <div class="sidebar-footer">
-                <a href="./cadastro.html" class="sidebar-link">
+                <a href="./index.html" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
