--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,10 @@
                             <input type="text" id="nome-empresa" class="form-control" required>
                         </div>
                         <div class="mb-2 ms-4">
+                            <label for="cpf" class="form-label fw-bold text-colored">Nº Inscrição Estadual</label>
+                            <input type="text" id="ie" class="form-control" required>
+                        </div>
+                        <div class="mb-2 ms-4">
                             <label for="cpf" class="form-label fw-bold text-colored">CPF/CNPJ</label>
                             <input type="text" id="cpfCnpj" class="form-control" required>
                         </div>
